b2c/sfsc/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>SCC_Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_SCC_Sync_Status__c</fullName>
        <description>This is a connector field used to store case sync status</description>
        <label>Case SCC Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Synchronised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Type__c</fullName>
        <description>This field holds case sub type value coming from Salesforce Commerce Cloud.</description>
        <inlineHelpText>This field holds case sub type value coming from Salesforce Commerce Cloud.</inlineHelpText>
        <label>Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Where is my order</fullName>
                </value>
                <value>
                    <fullName>What is my order status</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Id__c</fullName>
        <description>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</description>
        <inlineHelpText>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</inlineHelpText>
        <label>SFCC Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCC_Customer_Number__c</fullName>
        <description>This field holds commerce cloud customer number</description>
        <inlineHelpText>This field holds commerce cloud customer number</inlineHelpText>
        <label>SFCC Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCC_Order_No__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Order No. This is optional field</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Order No. This is optional field</inlineHelpText>
        <label>SFCC Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Contact_Us</fullName>
        <active>true</active>
        <businessProcess>SCC_Support</businessProcess>
        <label>Contact Us</label>
    </recordTypes>      
</CustomObject>